--- a/html/map.html
+++ b/html/map.html
@@ -28,13 +28,8 @@
       <div class="contentDiv">
        <h2>World Map</h2>
        <hr>
-       <h3>Coming soon!</h3>
+       <iframe src="../html/mapsrc.html" scrolling="no" frameborder="0" width="100%" height="85%"></iframe>
        <hr>
       </div>
   </body>
-
-  <footer>
-    <i class="fab fa-twitter"></i> <a href="https://twitter.com/zeahproduct">Twitter</a>&nbsp;&nbsp;&nbsp;
-    <i class="fab fa-discord"></i> <a href="https://discordapp.com/invite/q73k9Dn">Discord</a>
-  </footer>
 </html>
