Fixed map on firefox

--- a/html/mapsrc.html
+++ b/html/mapsrc.html
@@ -37,6 +37,6 @@
 		</style>
 	</head>
 	<body onload="window.scroll(5400, 2400)">
-	  <img src="../images/map.jpg" draggable="false">
+	  <img src="../images/map.jpg" draggable="false" ondragstart="return false;">
 	</body>
 </html>
