--- a/html/map.html
+++ b/html/map.html
@@ -7,6 +7,15 @@
     <link href="../css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122482990-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122482990-1');
+    </script>
   </head>
 
   <body>
@@ -29,7 +38,6 @@
        <h2>World Map</h2>
        <hr>
        <iframe src="../html/mapsrc.html" scrolling="no" frameborder="0" width="100%" height="85%"></iframe>
-       <hr>
       </div>
   </body>
 </html>
