Added more content to home page

--- a/html/index.html
+++ b/html/index.html
@@ -38,14 +38,48 @@
        <h2>Welcome to the Iron Plaza!</h2>
        <hr>
        <h3>This website's goal is to provide various helpful tools for ironman accounts in OldSchool RuneScape.<br />It's still in development, so expect lots of new features in the future.</h3>
-       <hr>
-       <h3>If you have any questions or concerns, don't be afraid to contact me in-game. (IronProduct)</h3>
-       <hr>
+       <br />
+       <div class="row">
+        <div class="column">
+          <h3>Recent Changes (Updated 7/18/2018)</h3>
+          <hr>
+          <h4>
+            - Added obsidian armor to the checklist.
+            <br />
+            - Improved the alignment of the checklist.
+            <br />
+            - Included hiscores page in the footer.
+            <br />
+            - Fixed an issue with map dragging on certain browsers.
+            <br />
+            - Other minor bug fixes and site improvements.
+          </h4>
+        </div>
+        <div class="column">
+          <h3>Planned Features</h3>
+          <hr>
+          <h4>
+            - Achievement diary items on the checklist.
+            <br />
+            - Download/share option for the checklist.
+            <br />
+            - Add and remove custom items to the checklist.
+            <br />
+            - Zooming for the world map.
+            <br />
+            - Quick jump to major areas on the world map.
+            <br />
+            - Customizable site themes.
+          </h4>
+        </div>
+      </div>
       </div>
   </body>
 
   <footer>
-    <i class="fab fa-twitter"></i> <a href="https://twitter.com/zeahproduct">Twitter</a>&nbsp;&nbsp;&nbsp;
-    <i class="fab fa-discord"></i> <a href="https://discordapp.com/invite/q73k9Dn">Discord</a>
+    <i class="fab fa-twitter"></i> <a href="https://twitter.com/zeahproduct" target="_blank">Twitter</a>&nbsp;&nbsp;&nbsp;
+    <i class="fab fa-discord"></i> <a href="https://discordapp.com/invite/q73k9Dn" target="_blank">Discord</a>&nbsp;&nbsp;&nbsp;
+    <i class="fas fa-trophy"></i> <a href="http://services.runescape.com/m=hiscore_oldschool_ironman/hiscorepersonal.ws?user1=IronProduct" target="_blank">IronProduct</a>
+
   </footer>
 </html>
