Start of world map zooming

--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
           <h4>
             - Improved the alignment of the checklist.
             <br />
-            - Included hiscores page in the footer.
+            - Included hiscores link in the footer.
             <br />
             - Fixed an issue with map dragging on certain browsers.
             <br />
