Update for home page

--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,8 @@
           <h3>Recent Changes (Updated 7/18/2018)</h3>
           <hr>
           <h4>
+            - Started world map zooming.
+            <br />
             - Improved the alignment of the checklist.
             <br />
             - Included hiscores link in the footer.
@@ -62,8 +64,6 @@
             - Download/share option for the checklist.
             <br />
             - Add and remove custom items to the checklist.
-            <br />
-            - Zooming for the world map.
             <br />
             - Quick jump to major areas on the world map.
             <br />
