--- a/html/index.html
+++ b/html/index.html
@@ -41,10 +41,12 @@
        <br />
        <div class="row">
         <div class="column">
-          <h3>Recent Changes (Updated 7/18/2018)</h3>
+          <h3>Recent Changes (Updated 7/20/2018)</h3>
           <hr>
           <h4>
-            - Started world map zooming.
+            - Added zooming to the world map.
+            <br />
+            - Added rejuvenation pool, gilded altar, obsidian items, and rune pouches to the checklist.
             <br />
             - Improved the alignment of the checklist.
             <br />
